--- a/templates/index.html
+++ b/templates/index.html
@@ -164,7 +164,7 @@
         <!-- Bottom Bar -->
         <div class="bottom-bar">
 
-            <div class="chat-input-container">
+            <div id="msg-container" class="chat-input-container">
                 <div class="chat-input-header">
                     <div class="bot-avatar" id="edubyte-avatar"></div>
                     <span class="models-name">Edubyte</span>
