--- a/templates/index.html
+++ b/templates/index.html
@@ -169,7 +169,7 @@
                     <div class="bot-avatar" id="edubyte-avatar"></div>
                     <span class="models-name">Edubyte</span>
                 </div>
-                <div class="chat-input-footer">
+                <div id="options" class="chat-input-footer">
                     <input class="chat-input" placeholder="Ask me anything...">
                     <div class="chat-controls">
                         <button class="control-button">
