--- a/templates/index.html
+++ b/templates/index.html
@@ -275,6 +275,16 @@
                 </div>
             </div>
 
+            <!-- Chatbot Showcase -->
+            <div id="chatbot-showcase" class="chatbot-showcase" style="display: none;">
+                <div class="showcase-content">
+                    <div class="showcase-avatar" id="showcase-avatar"></div>
+                    <h1 class="showcase-title" id="showcase-title">Select a Chatbot</h1>
+                    <p class="showcase-description" id="showcase-description">Choose a chatbot from the sidebar to get started</p>
+                    <button class="start-chat-btn" id="start-chat-btn">Start Chatting</button>
+                </div>
+            </div>
+
             <!-- Chatbot Interface -->
             <div id="chatbot-interface" class="chatbot-interface" style="display: none;">
                 <div class="chatbot-header">
